--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Font Awsome -->
         <link rel="stylesheet" href="css/all.min.css">
         <!-- WebPage Icon -->
-        <link rel="icon" type="image/x-icon" href="/images/icon.png">
+        <link rel="icon" type="image/x-icon" href="/images/icon.ico">
     </head>
     <body>
         <header class="section">
@@ -22,10 +22,10 @@
                     <img src="images/logo.png" alt="">
                 </div>
                 <ul class="bar">
-                    <li><a href="">Why Shock?</a></li>
+                    <li><a href="#rating">Why Shock?</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#menu">Menu</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="usr">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </div>
-        <div class="rating section">
+        <div id="rating" class="rating section">
             <div class="illustration">
                 <img src="images/shef.png" alt="shef">
             </div>
@@ -161,7 +161,7 @@
                 <img src="images/phone.jpeg" alt="">
             </div>         
         </div>
-        <footer class="section">
+        <footer id="contact" class="section">
             <div class="container">
                 <div class="row1">
                     <div class="logo">
